--- a/laporan-realtime.html
+++ b/laporan-realtime.html
@@ -35,7 +35,6 @@
         <thead>
           <tr class="bg-gray-100 text-left">
             <th class="p-2 border-b">Metode</th>
-            <th class="p-2 border-b">Tipe Transaksi</th>
             <th class="p-2 border-b">Total Transaksi</th>
             <th class="p-2 border-b">Nominal (Rp)</th>
           </tr>
@@ -57,109 +56,113 @@
     setInterval(updateTime, 1000);
     updateTime();
 
-    let payments = [];
-    let refunds = [];
-    let paymentTypes = [];
-    let paymentTypesMap = {};
-
     async function loadData() {
       try {
         const res = await axios.get("Transactions.json");
         const data = res.data;
 
-        payments = (data.Payment || []).map(p => ({...p, Type:"Pembelian"}));
-        refunds = (data.Refund || []).map(r => ({
-          ...r,
-          Type: "Refund"
-        }));
-        paymentTypes = data.PaymentType || [];
-        paymentTypes.forEach(pt => paymentTypesMap[pt.Id] = pt.Name);
+        const payments = (data.Payment || []).map(p => ({...p, Type: "Sale"}));
+        const refunds = (data.Refund || []).map(r => ({...r, Type: "Refund"}));
+        const paymentTypes = data.PaymentType || [];
 
-        renderToday();
+        const typeMap = {};
+        paymentTypes.forEach(pt => typeMap[pt.Id] = pt.Name);
 
-      } catch(err) {
-        console.error("Error loading Transactions.json", err);
+        // Filter today's transactions
+        const today = DateTime.now().setZone("Asia/Jakarta").toFormat("yyyy-LL-dd");
+
+        const todayPayments = payments.filter(p => {
+          const dt = DateTime.fromISO(p.DateCreated, { zone: "Asia/Jakarta" });
+          return dt.toFormat("yyyy-LL-dd") === today;
+        });
+
+        const todayRefunds = refunds.filter(r => {
+          const dt = DateTime.fromISO(r.DateCreated, { zone: "Asia/Jakarta" });
+          return dt.toFormat("yyyy-LL-dd") === today;
+        });
+
+        renderTable(todayPayments, todayRefunds, typeMap);
+        renderSummary(todayPayments, todayRefunds, typeMap);
+
+      } catch (err) {
+        console.error("Error loading Transactions.json:", err);
       }
     }
 
-    function renderToday() {
-      const allTransactions = [...payments, ...refunds];
-      const todayStr = DateTime.now().setZone("Asia/Jakarta").toFormat("yyyy-LL-dd");
-
-      const todayTx = allTransactions.filter(t => {
-        const dt = DateTime.fromISO(t.DateCreated, { zone: "Asia/Jakarta" });
-        return dt.toFormat("yyyy-LL-dd") === todayStr;
-      });
-
-      renderTable(todayTx);
-      renderSummary(todayTx);
-    }
-
-    function renderTable(transactions) {
+    function renderTable(payments, refunds, typeMap) {
       const tbody = document.getElementById("transactions");
       tbody.innerHTML = "";
       let counter = 1;
 
-      transactions.sort((a,b) => new Date(a.DateCreated) - new Date(b.DateCreated));
-
-      transactions.forEach(t => {
-        const dt = DateTime.fromISO(t.DateCreated, { zone: "Asia/Jakarta" });
-        const jam = dt.isValid ? dt.toFormat("HH:mm") : "-";
-
+      // Render payments
+      payments.forEach(p => {
+        const dt = DateTime.fromISO(p.DateCreated, { zone: "Asia/Jakarta" });
         const tr = document.createElement("tr");
-
-        if(t.Type === "Refund"){
-          tr.className = "text-red-600 font-semibold";
-        }
-
         tr.innerHTML = `
-          <td class="p-2 border-b">${t.Type === "Pembelian" ? counter++ : "-"}</td>
-          <td class="p-2 border-b">Rp ${Number(t.Amount).toLocaleString("id-ID")}</td>
-          <td class="p-2 border-b">${t.PaymentTypeId ? paymentTypesMap[t.PaymentTypeId] : "-"}</td>
-          <td class="p-2 border-b">${t.Type}</td>
-          <td class="p-2 border-b">${jam}</td>
+          <td class="p-2 border-b">${counter++}</td>
+          <td class="p-2 border-b">Rp ${Number(p.Amount).toLocaleString("id-ID")}</td>
+          <td class="p-2 border-b">${typeMap[p.PaymentTypeId] || "-"}</td>
+          <td class="p-2 border-b">${p.Type}</td>
+          <td class="p-2 border-b">${dt.toFormat("HH:mm")}</td>
         `;
-
         tbody.appendChild(tr);
       });
 
-      if(transactions.length === 0){
+      // Render refunds
+      refunds.forEach(r => {
+        const dt = DateTime.fromISO(r.DateCreated, { zone: "Asia/Jakarta" });
+        const tr = document.createElement("tr");
+        tr.classList.add("text-red-600", "font-semibold");
+        tr.innerHTML = `
+          <td class="p-2 border-b"></td>
+          <td class="p-2 border-b">Rp ${Number(r.Amount).toLocaleString("id-ID")}</td>
+          <td class="p-2 border-b">${r.PaymentTypeId ? (typeMap[r.PaymentTypeId] || "-") : ""}</td>
+          <td class="p-2 border-b">${r.Type}</td>
+          <td class="p-2 border-b">${dt.toFormat("HH:mm")}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+
+      if (payments.length === 0 && refunds.length === 0) {
         const tr = document.createElement("tr");
         tr.innerHTML = `<td colspan="5" class="p-2 border-b text-center">Tidak ada transaksi hari ini</td>`;
         tbody.appendChild(tr);
       }
     }
 
-    function renderSummary(transactions) {
-      const summaryData = {};
+    function renderSummary(payments, refunds, typeMap) {
+      const summaryData = { TOTAL: { count:0, total:0 } };
 
-      transactions.forEach(t => {
-        const method = t.PaymentTypeId ? paymentTypesMap[t.PaymentTypeId] : "-";
-        const type = t.Type;
-        const amt = Number(t.Amount) || 0;
+      payments.forEach(p => {
+        const method = typeMap[p.PaymentTypeId] || "Lainnya";
+        const amt = Number(p.Amount) || 0;
+        if(!summaryData[method]) summaryData[method] = { count:0, total:0 };
+        summaryData[method].count++;
+        summaryData[method].total += amt;
+        summaryData["TOTAL"].count++;
+        summaryData["TOTAL"].total += amt;
+      });
 
-        if(!summaryData[method]) summaryData[method] = {};
-        if(!summaryData[method][type]) summaryData[method][type] = { count:0, total:0 };
-
-        summaryData[method][type].count++;
-        summaryData[method][type].total += amt;
+      refunds.forEach(r => {
+        const amt = Number(r.Amount) || 0;
+        if(!summaryData["REFUND"]) summaryData["REFUND"] = { count:0, total:0 };
+        summaryData["REFUND"].count++;
+        summaryData["REFUND"].total += amt;
+        summaryData["TOTAL"].total -= amt; // subtract from total
       });
 
       const sumBody = document.getElementById("summary");
       sumBody.innerHTML = "";
 
-      Object.keys(summaryData).forEach(method => {
-        Object.keys(summaryData[method]).forEach(type => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td class="p-2 border-b font-semibold">${method}</td>
-            <td class="p-2 border-b">${type}</td>
-            <td class="p-2 border-b">${summaryData[method][type].count}</td>
-            <td class="p-2 border-b">Rp ${summaryData[method][type].total.toLocaleString("id-ID")}</td>
-          `;
-          if(type === "Refund") row.className = "text-red-600 font-semibold";
-          sumBody.appendChild(row);
-        });
+      Object.keys(summaryData).forEach(m => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td class="p-2 border-b font-semibold">${m}</td>
+          <td class="p-2 border-b">${summaryData[m].count}</td>
+          <td class="p-2 border-b">Rp ${summaryData[m].total.toLocaleString("id-ID")}</td>
+        `;
+        if (m === "REFUND") row.classList.add("text-red-600");
+        sumBody.appendChild(row);
       });
     }
 
